--- a/UniqueAttributeDataFix/UniqueAttributeDataFix/UniqueAttributeDataFix.csproj
+++ b/UniqueAttributeDataFix/UniqueAttributeDataFix/UniqueAttributeDataFix.csproj
@@ -57,7 +57,7 @@
     <Compile Include="PrintHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sagas.cs" />
+    <Compile Include="SagaInfo.cs" />
     <Compile Include="SetSagaUniqueValueInMetadata.cs" />
   </ItemGroup>
   <ItemGroup>
